# init-deep

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  CONTRIBUTING.md  SECURITY.md  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: validate.yml
adapters/continue/prompts/: init-deep.md
adapters/continue/rules/: init-deep.md
adapters/copilot/prompts/: init-deep.prompt.md
adapters/cursor/commands/: init-deep.md
adapters/gemini/commands/: init-deep.toml
adapters/windsurf/: init-deep.md
scripts/: build_init_deep.py  check_init_deep.py
skills/init-deep/: SKILL.md
src/init_deep/: __init__.py  __main__.py  build.py  cli.py  compat.py  compiler.py  config.py  doctor.py  drift.py  generators.py  ir.py  linter.py  loader.py  manifest.py  planner.py  selection.py  watcher.py
targets/: registry.toml
tests/: test_build_v2.py  test_cli_contract.py  test_compat.py  test_config.py  test_doctor.py  test_drift.py  test_generators.py  test_init_deep_generation.py  test_ir.py  test_linter.py  test_manifest.py  test_new_targets.py  test_planner.py  test_properties.py  test_readme_contract.py  test_registry.py  test_repo_contract.py  test_selection.py  test_snapshot.py  test_target_modes.py  test_watcher.py
tools/init_deep/: paths.py  renderers.py
(+15 files in other folders)
